2006-09-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	forced property.

	* lily/accidental.cc (after_line_breaking): read forced property.

	* lily/accidental-engraver.cc (process_acknowledged): set 'forced
	property.

	* input/regression/accidental-forced-tie.ly:  new file.

2006-09-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/engraver-init.ly: set ignoreFiguredBassRest in Staff context.

	* lily/figured-bass-engraver.cc: only listen to rest events if
	ignoreFiguredBassRest is not set.

	* scm/define-context-properties.scm
	(all-user-translation-properties): add ignoreFiguredBassRest property

2006-09-24  Joe Neeman  <joeneeman@gmail.com>

	* lily/paper-book.cc (get_system_specs):
	(set_system_penalty): fix breakbefore.
	We used to set a penalty on the system after the break, now we
	set a permission on the system before the break

	* lily/grob-property.cc: add scm debugging hooks into
	property modification

	* lily/context-property.cc:
	* lily/engraver.cc:
	rename make_foo_from_properties to internal_make_foo and
	move it from context-property.cc to a member function of
	Engraver.
	
	* lily/include/lily-guile-macros.hh:
	overload ly_symbol2scm macro so that there is no more need
	to use internal_foo

	* lily/volta-repeat-iterator.cc:
	* lily/tweak-engraver.cc:
	* lily/tuplet-bracket.cc:
	* lily/span-bar-engraver.cc:
	* lily/script-engraver.cc:
	* lily/prob-scheme.cc:
	* lily/pointer-group-interface.cc:
	* lily/parser.yy:
	* lily/grob-scheme.cc:
	* lily/grob-property.cc:
	* lily/context.cc:
	* lily/context-property.cc:
	* lily/break-substitution.cc:
	* lily/break-align-engraver.cc:
	* lily/axis-group-interface.cc:
	* lily/align-interface.cc:
	remove calls to internal_FOO

	* lily/system-start-delimiter-engraver.cc:
	* lily/parenthesis-engraver.cc:
	* lily/accidental-engraver.cc:
	remove calls to make_foo_from_properties

2006-09-23  Graham Percival  <gpermus@gmail.com>
